RESOLVED FIXED Bug 54014
[GTK] Incorrect assertion in WorkQueueGtk, we need to register more than one handle
https://bugs.webkit.org/show_bug.cgi?id=54014
Summary [GTK] Incorrect assertion in WorkQueueGtk, we need to register more than one ...
Alejandro G. Castro
Reported 2011-02-08 09:30:15 PST
When adding handlers for a connection we need more than once, at leas for finish and for modification of the descriptor, hence this assertion can not work.
Attachments
Proposed patch (2.01 KB, patch)
2011-02-08 09:32 PST, Alejandro G. Castro
mrobinson: review+
Alejandro G. Castro
Comment 1 2011-02-08 09:32:35 PST
Created attachment 81651 [details] Proposed patch
Alejandro G. Castro
Comment 2 2011-02-09 00:00:48 PST
Note You need to log in before you can comment on or make changes to this bug.