2011-02-08  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Incorrect assertion in WorkQueueGtk, we need to register
        more than one handle
        https://bugs.webkit.org/show_bug.cgi?id=54014

        Fixed assertion condition we need to register more than one
        handler for the same file descriptor.

        * Platform/gtk/WorkQueueGtk.cpp:
        (WorkQueue::registerEventSourceHandler):

Canonical link: https://commits.webkit.org/68084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78027 268f45cc-cd09-0410-ab3c-d52691b4dbfc